--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,15 @@
+
+body{
+  margin: 0;
+  padding: 0;
+  font-family: Lexend;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
 /* Aqui va la parte de David */
 
 
