--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ body{
   width: 500px;
   background-size: contain;
   background-repeat: no-repeat;
-  
+  margin-bottom: 50px;
 }
 
 .contenedor{
