--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,8 @@ body{
   width: 500px;
   background-size: contain;
   background-repeat: no-repeat;
-  margin-bottom: 50px;
+  margin-right: 100px;
+  margin-top: 50PX;
 }
 
 .contenedor{
