--- a/css/index.css
+++ b/css/index.css
@@ -64,10 +64,21 @@ body{
 .boton:hover{
   border: #ffffff solid 2px;
   cursor: pointer;
-}
  
+}
+.boton:hover{
+  background-color: #57b8d6;
+}
+.titulo1:hover{
+  color: #39A70B;
+} 
+.titulo2:hover{
+  color: #39A70B;
+} 
+.texto:hover{
+  color: #39A70B;
+} 
 
 
 
 
-/* Aqui va la parte de Cristian */
